--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,10 +4,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to example.com, <%= @user.name %></h1>
+    <h1>Welcome to resend.com, <%= @user.name %></h1>
+
     <p>
-      You have successfully signed up to example.com,
+       This is an inline attachment <%= image_tag attachments['inline-image'].url, style: 'height:50px;width:60px;' %>
     </p>
+
     <p>
       To login to the site, just follow this link: <%= @url %>.
     </p>
